# 2026-aimaster-builder

./: .env.example  .gitignore  README.md  changed.md  cli.py  pyproject.toml  requirements.txt
api/: app.py  deps.py  schemas.py
builder/: enrichment.py  finalize.py  intake.py  metadata.py  ops.py  pipeline.py  relations.py  relations_space.py  review.py  review_agent.py  structuring.py  translate.py  verify_curate.py
builder/extract/: base.py  csv_loader.py  md_loader.py  pdf_loader.py  sqlite_loader.py  txt_loader.py
builder/indexing/: chunker.py  embedder.py  qdrant_writer.py  sectioning.py
config/: entity_types.yaml  relation_types.yaml  settings.fake.yaml  settings.yaml
core/: factory.py  ids.py  manifest.py  progress.py  providers.py  queue_reporter.py  rich_reporter.py  schemas.py  wiki_io.py
docs/: workflow.md
graphs/: ingestion_graph.py
prompts/: enrichment.md  relation_curation.md  structuring-v2.md  structuring-v3.md  structuring.md  translate.md  verification-v2.md  verification.md
scripts/: demo.sh  generate_samples.py
